--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "bootstrap": "^5.3.2",
     "ngx-bootstrap": "^12.0.0",
-    "primeng": "^17.0.0",
+    "ngx-slick-carousel": "^17.0.0",
+    "primeicons": "^6.0.1",
+    "primeng": "^17.1.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
