--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "angular": "^1.8.2",
     "bootstrap": "^5.3.2",
+    "flatpickr": "^4.6.13",
     "ngx-bootstrap": "^12.0.0",
     "ngx-slick-carousel": "^17.0.0",
     "primeicons": "^6.0.1",
